recursion.lessons.recursion.koch.Crab.scala.error
Crab:7: error: not found: value sqrt
		crab(levels-1 , length*sqrt(2))
                                       ^