recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
	if ( levels == 0){
		avance(length: Double)
	}
	else{
		gauche(45 :Double)
		crab(levels-1 , length*sqrt(2))
		}
}
